fix: change size of image
it was too small

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@
   align-items: center;
   color: white;
   background-color: gray;
-  width: 300px;
+  width: 500px;
   height: auto;
 }
 .hero-text {
